# wanghui

./: configure.ac
conf/vanilla/autoload_configs/: videoshare.conf.xml  videoshare_layouts.conf.xml
src/: switch_core_session.c  switch_ivr_bridge.c
src/include/: switch_core.h
src/mod/applications/: 说明.txt
src/mod/applications/mod_commands/: mod_commands.c
src/mod/applications/mod_conference/: conference_api.c  conference_loop.c  conference_member.c  conference_video.c  mod_conference.c  mod_conference.h
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/applications/mod_videoshare/: Makefile.am  mod_videoshare.c  mod_videoshare.h  videoshare_al.c  videoshare_api.c  videoshare_cdr.c  videoshare_event.c  videoshare_file.c  videoshare_loop.c  videoshare_member.c  videoshare_record.c  videoshare_utils.c  videoshare_video.c
src/mod/endpoints/mod_sofia/: sofia_reg.c
